Small refactor and added tests for ConfigCreator